<resources>
    <string name="app_name">Shrine</string>

    <string name="shr_logo_content_description">Shrine Logo</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="password_error_message">Password must contain atleast 8 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Search</string>
    <string name="title_filter">Filter</string>
    <string name="product_image">Product Image</string>
    <string name="product_title">Product Title</string>
    <string name="product_price">Product Price</string>
    <string name="featured">Featured</string>
    <string name="apartment">Apartment</string>
    <string name="accessories">Accessories</string>
    <string name="shoes">Shoes</string>
    <string name="tops">Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="dresses">Dresses</string>
    <string name="account">Account</string>
</resources>